# project-ult-reasoner-runtime

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/frontend-api/: providers.json  results.json
config/: callbacks.example.yaml  providers.example.yaml  providers.three-backends.example.yaml  scrub.example.yaml
docs/: PROGRESS.md  TASK_BREAKDOWN.md  reasoner-runtime.project-doc.md
reasoner_runtime/: __init__.py  _contracts.py  public.py
reasoner_runtime/callbacks/: __init__.py  base.py  factory.py  langfuse.py  litellm.py  otel.py
reasoner_runtime/config/: __init__.py  loader.py  models.py
reasoner_runtime/core/: __init__.py  engine.py  models.py
reasoner_runtime/health/: __init__.py  aggregator.py  checker.py  models.py
reasoner_runtime/providers/: __init__.py  claude_code_cli_client.py  client.py  codex_client.py  fallback.py  models.py  routing.py
reasoner_runtime/providers/auth/: __init__.py  codex.py
reasoner_runtime/replay/: __init__.py  builder.py  models.py
reasoner_runtime/scrub/: __init__.py  handler.py  rules.py
reasoner_runtime/structured/: __init__.py  parser.py
scripts/: check_direct_imports.py  verify_deps.py
tests/: test_engine.py  test_models.py  test_providers.py
tests/boundary/: test_red_lines.py
tests/contract/: test_frontend_api_artifacts.py  test_runtime_contract.py
tests/integration/: test_callback_switching.py  test_direct_imports.py  test_e2e_call.py  test_e2e_observability.py  test_generate_structured_callbacks.py  test_generate_structured_fallback.py  test_generate_structured_provider_flow.py  test_generate_structured_replay.py  test_generate_structured_scrub.py  test_health_check.py  test_health_gate.py  test_langfuse_callback.py  test_phase0_minimal_call.py  test_public_api.py
tests/regression/: test_with_shared_fixtures.py
tests/smoke/: test_public_smoke.py
tests/unit/: test_callback_regression.py  test_callbacks.py  test_claude_code_cli_client.py  test_codex_auth.py  test_codex_client.py  test_config.py  test_contract_exports.py  test_dep_lock.py  test_fallback.py  test_health.py  test_langfuse_callback.py  test_models.py  test_public_entrypoints.py  test_replay.py  test_scrub.py  test_stage4_trace_metadata.py  test_structured.py
