[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-reasoner-runtime"
version = "0.1.1"
description = "LLM structured-output gateway with replay/scrub/health for project-ult."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "project-ult-contracts>=0.1.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "litellm==1.83.0",
    "instructor==1.15.1",
    "opentelemetry-api==1.31.1",
]

[project.optional-dependencies]
# Pure-pip dev tools — offline-first per SUBPROJECT_TESTING_STANDARD.md §2.2.
# Used by test-fast / smoke CI lanes. Never includes git+URL deps.
dev = [
    "pytest>=8",
]
# Cross-repo schema source-of-truth pin (iron rule #6). Pinned to v0.1.3
# to match every other module's contract-lane anchor (matches the floor
# bumped in stage 1 consistency lane on 2026-05-01). Separate extra so
# the contract lane is the only place pulling in a git+URL dependency —
# keeps test-fast / smoke lanes offline-first.
contracts-schemas = [
    "project-ult-contracts @ git+https://github.com/shenfanjie5-bit/project-ult-contracts.git@v0.1.3",
]
# Shared regression fixtures bundled with project-ult-audit-eval.
# Separate extra so the regression lane is the only place pulling in a
# git+URL dependency (codex review #3 of stage 2.1 — re-applied here).
shared-fixtures = [
    # Pinned to v0.2.5 (carries forward v0.2.4 dot-form canonical_entity_id
    # reconciliation and v0.2.1+ real sha256 fixture hashes required by
    # tests/regression/test_with_shared_fixtures.py
    # TestReplayHashesRoundTripAgainstRuntime; bumped 2026-05-01 stage 1
    # consistency lane to align all 10 consumers with the audit-eval producer).
    "project-ult-audit-eval @ git+https://github.com/shenfanjie5-bit/project-ult-audit-eval.git@v0.2.5",
]

[tool.setuptools]
packages = [
    "reasoner_runtime",
    "reasoner_runtime.callbacks",
    "reasoner_runtime.config",
    "reasoner_runtime.core",
    "reasoner_runtime.health",
    "reasoner_runtime.providers",
    "reasoner_runtime.providers.auth",
    "reasoner_runtime.replay",
    "reasoner_runtime.scrub",
    "reasoner_runtime.structured",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [".", "../contracts/src"]
